# openfluid

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CMake.in.cmake  CMake.in.common  CMake.in.config  CMake.in.sub  CMakeLists.txt  COPYING  CPack.in.cmake  CPack.in.config  CPack.linux.in.cmake  CPack.osx.in.cmake  CPack.win32.in.cmake  CTestConfig.cmake  CTestCustom.cmake  Doxyfile.docfordev.in  Doxyfile.in  LICENSE  README  README.TXT  README.md  check-tools.in  configure  configure.in.common  configure.in.linux-gnu  configure.in.msys  engine.cpack.in  enginewodev.cpack.in  full.cpack.in  functions.cpack.in  makefile  ofelib.cpack.in  po_update.cmake  ts_update.cmake
cmake/: CMakeLists.txt  FindGEOS.cmake  FindR.cmake  OpenFLUIDConfig.cmake.in  OpenFLUIDConfigVersion.cmake.in  OpenFLUIDDetectQt.cmake  OpenFLUIDHelpers.cmake  OpenFLUIDHelpers.cmake.in  OpenFLUIDHelpersConfig.cmake.in  OpenFLUIDMacros.cmake  OpenFLUIDSystemInfo.cmake  OpenFLUIDTestScript.cmake  QtNamespaceFacade.cmake
cmake/internal/: ArchForCMake.cpp  FindCURL.cmake  FindGEOS.cmake  FindRapidJSON.cmake  OpenFLUIDInternalHelpers.cmake  OpenFLUIDQtDetection.cmake  OpenFLUIDSystemInfo.cmake  OpenFLUIDWareBuildScript.cmake.in  PackagingForMarket.cmake
doc/: BuildPDF.cmake  CMakeLists.txt  HTML-Doxyfile.in  LaTeX-Doxyfile.in
doc/API-doxygen/: CMakeLists.txt  Doxyfile.in  classoview.dox  debug.dox  emptyfunc.dox  fortran.dox  header.html  howitworks.dox  integrate.dox  internaldata.dox  mainpage.dox  misc.dox  runenv.dox  signature.dox  simdatavar.dox  space.dox  stylesheet.css  time.dox  values.dox  warnerrorlog.dox
doc/contents/: apdx_datetime.dox  apdx_datetime.md  apdx_generators.dox  apdx_generators.md  apdx_multicolumn-generators.md  apdx_obsparams.dox  apdx_optenv.dox  apdx_optenv.md  apdx_prj.dox  apdx_prj.md  apdx_seedableware.md  apdx_submodule.md  apdx_tpl_signature.md  apdx_values.dox  apdx_values.md  apdx_workspace.md  dev_classoview.dox  dev_createsim.dox  dev_createsim.md  dev_debug.dox  dev_emptyfunc.dox  dev_fortran.dox  dev_fragment.md  dev_howitworks.dox  dev_internaldata.dox  dev_misc.dox  dev_oviewsim.dox  dev_oviewsim.md  dev_runenv.dox  dev_signature.dox  dev_signature.md  dev_sim2doc.dox  dev_sim2doc.md  dev_simdatavar.dox  dev_space.dox  dev_srccode.dox  dev_srccode.md  dev_time.dox  dev_values.dox  dev_warnerrorlog.dox  (+20 more)
doc/docfordev-doxygen/: CMakeLists.txt  Doxyfile.in
doc/examples/: CMakeLists.txt  openfluid-engine_example-primitives_en.tex  openfluid_example-primitives_en.tex
doc/layout/: custom.css  doxyopenfluid.css  doxyopenfluid.sty  footer.html  ga_snippet.js.in  header.html  header.html.in  layout.xml  main.tex.in  stylesheet.css
doc/manuals/: CMakeLists.txt  openfluid-engine_quickref_en.tex  openfluid_quickuser_en.tex  openfluid_quickuser_en.tex.in
doc/snippets/: CMakeLists.txt
engine/: CMake.in.common  CMakeLists.txt  Doxyfile.in  configure.in.linux-gnu  functions.cpack.in  kernel.cpack.in  mhydas.cpack.in  ofelib-dev.cpack.in  ofelib.cpack.in
engine/include/: openfluid-base.h  openfluid-core.h  openfluid-tools.h
engine/tests/: CMakeLists.txt
examples/: CMakeLists.txt
examples/functions/: CMakeLists.txt
examples/simulators/: CMakeLists.txt
examples/wares-dev/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  POTFILES.in  es_ES.po  fr_FR.po  it_IT.po  openfluid.pot
resources/: CMakeLists.txt  copyright-header.txt
resources/debian/: control  copyright
resources/doc/: BUGS  openfluid-engine_quickref_en.tex  openfluid-engine_users_en.tex
resources/doxygen/: emptyfunc.dox  footer.html  howitworks.dox  integrate.dox  stylesheet.css
resources/examples/: CMakeLists.txt
resources/func2doc/: func2doc_tpl.tex
resources/graphics/: cmdline-version.tape
resources/ofeconvert/: ofeconvert_13-14.py
resources/ofefunc2doc/: ofefunc2doc.py
resources/packaging/: NSIS.InstallOptions.ini.in  NSIS.template.in  openfluid-builder.desktop.in  openfluid-devstudio.desktop.in  readme.txt  welcome.txt
resources/tests/: CMakeLists.txt  badSU_non_snapped.dbf  badSU_non_snapped.shp
resources/tools/: extract_std_headers.sh  importsim.py  oficons-extract-from-material.py  oficons-extract.py  ofpack-osx-brewcask.cmake.in  ofpack-osxdmgbuild.cmake.in  ofsrc-completion-rebuild.py  ofsrc-cppcheck.py  ofsrc-stylecheck.py  oftest_marketpackbuild.cmake
resources/translations/: openfluid-fr_FR.ts  openfluid-zh_CN.ts
src/: CMakeLists.txt  configure  makefile  makeopts.inc
src/apps/: CMakeLists.txt
src/builderexts/: CMakeLists.txt
src/functions/: CMakeLists.txt  makefile
src/kernel/: AppTools.cpp  AppTools.h  CMakeLists.txt  DynamicLib.cpp  DynamicLib.h  Engine.cpp  Engine.h  IOMan.cpp  IOMan.h  OpenFLUID.cpp  OpenFLUID.h  PluginManager.cpp  PluginManager.h  RuntimeEnv.cpp  RuntimeEnv.h  config.h.in  main.cpp  main.h  makefile
src/main/: AppTools.cpp  AppTools.h  ColTextParser.cpp  ColTextParser.h  Doxyfile  Engine.cpp  Engine.h  HydroModule.cpp  HydroModule.h  IOMan.cpp  IOMan.h  Module.cpp  Module.h  PluginManager.cpp  PluginManager.h  RuntimeEnv.cpp  RuntimeEnv.h  main.cpp  main.h  makefile
src/observers/: CMakeLists.txt  CsvObserverBase.hpp  KmlObserverBase.hpp
src/ofelib/: CMakeLists.txt  ofelib-config.in  ofelib.pc.in
src/openfluid/: CMakeLists.txt  FindOpenFLUID.cmake.in  OpenFLUIDConfig.cmake.in  OpenFLUIDConfigVersion.cmake.in  OpenFLUIDWareMacros.cmake  aggregate_namespace_header.tpl  base.hpp  buddies.hpp  buildinfo.hpp.in  config.hpp.in  core.hpp  debug.hpp  deprecation.hpp  dllexport.hpp  engine.hpp  fluidx.hpp  global.hpp  global.hpp.in  io.hpp  machine.hpp  market.hpp  openfluid-gui.pc.in  openfluid-other.pc.in  openfluid.pc.in  scientific.hpp  tools.hpp  ware.hpp
src/sdk/: mhydasdk-core.h
src/stdplugs/: GUGUExchPlug.h  HayamiRSFunc.cpp  HayamiRSFunc.h  HayamiRSGUFunc.cpp  HayamiRSPlug.cpp  HayamiSUFunc.cpp  HayamiSUFunc.h  HayamiSUPlug.cpp  HayamiSUPlug.h  HayamiTools.cpp  HayamiTools.h  MSeytouxFunc.cpp  MSeytouxFunc.h  MSeytouxPlug.h  (+5 more)
tests/: CMakeLists.txt  tests-config.h.in  tests-config.hpp.in
(+5478 files in other folders)
