
SET(OPNFLD_COMPONENTS_DEFAULT_LIST   
  base
  buddies
  core
  fluidx
  machine
  market  
  tools 
  ware 
)

IF(OPENFLUID_ENABLE_LANDR)
  SET(OPNFLD_COMPONENTS_DEFAULT_LIST ${OPNFLD_COMPONENTS_DEFAULT_LIST} landr)
ENDIF()

IF(OPENFLUID_ENABLE_GUI)
  SET(OPNFLD_COMPONENTS_DEFAULT_LIST ${OPNFLD_COMPONENTS_DEFAULT_LIST} guicommon)
  IF (BUILD_APP_BUILDER)
    SET(OPNFLD_COMPONENTS_DEFAULT_LIST ${OPNFLD_COMPONENTS_DEFAULT_LIST} builderext)
  ENDIF()
ENDIF()


CONFIGURE_FILE(OpenFLUIDConfig.cmake.in "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDConfig.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDConfigVersion.cmake.in "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDConfigVersion.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDHelpers.cmake.in "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDHelpers.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDTestScript.cmake "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDTestScript.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDDetectQt.cmake "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDDetectQt.cmake" @ONLY)


INSTALL(FILES "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDConfig.cmake" 
        DESTINATION ${CMAKE_MODULES_INSTALL_PATH})
        
INSTALL(FILES "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDConfigVersion.cmake" 
        DESTINATION ${CMAKE_MODULES_INSTALL_PATH})        
        
INSTALL(FILES "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDHelpers.cmake" 
        DESTINATION ${CMAKE_MODULES_INSTALL_PATH})        
        
INSTALL(FILES "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDDetectQt.cmake" 
        DESTINATION ${CMAKE_MODULES_INSTALL_PATH})
        
INSTALL(FILES "${CMAKE_MODULES_OUTPUT_PATH}/OpenFLUIDTestScript.cmake" 
        DESTINATION ${CMAKE_MODULES_INSTALL_PATH})        
