
SET(OFBUILD_COMPONENTS_DEFAULT_LIST
  base
  core
  fluidx
  machine  
  tools 
  utils
  ware
  waresdev
)

IF(OFBUILD_ENABLE_GUI)
  SET(OFBUILD_COMPONENTS_DEFAULT_LIST ${OFBUILD_COMPONENTS_DEFAULT_LIST} ui-common ui-waresdev)
  IF(OFBUILD_ENABLE_APP_BUILDER)
    SET(OFBUILD_COMPONENTS_DEFAULT_LIST ${OFBUILD_COMPONENTS_DEFAULT_LIST} ui-builderext)
  ENDIF()
ENDIF()


CONFIGURE_FILE(internal/OpenFLUIDWareBuildScript.cmake.in internal/OpenFLUIDWareBuildScript.cmake @ONLY)

CONFIGURE_FILE(OpenFLUIDConfig.cmake.in "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDConfig.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDConfigVersion.cmake.in "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDConfigVersion.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDHelpers.cmake.in "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDHelpers.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDTestScript.cmake "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDTestScript.cmake" @ONLY)
CONFIGURE_FILE(OpenFLUIDDetectQt.cmake "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDDetectQt.cmake" @ONLY)
CONFIGURE_FILE(FindR.cmake "${OFBUILD_DIST_CMAKE_MODULES_DIR}/FindR.cmake" @ONLY)


INSTALL(FILES "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDConfig.cmake" 
        DESTINATION ${OPENFLUID_CMAKE_MODULES_INSTALL_PATH})
        
INSTALL(FILES "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDConfigVersion.cmake" 
        DESTINATION ${OPENFLUID_CMAKE_MODULES_INSTALL_PATH})        
        
INSTALL(FILES "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDHelpers.cmake" 
        DESTINATION ${OPENFLUID_CMAKE_HELPERSSCRIPTS_INSTALL_PATH})
        
INSTALL(FILES "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDDetectQt.cmake" 
        DESTINATION ${OPENFLUID_CMAKE_HELPERSSCRIPTS_INSTALL_PATH})
        
INSTALL(FILES "${OFBUILD_DIST_CMAKE_MODULES_DIR}/OpenFLUIDTestScript.cmake"
        DESTINATION ${OPENFLUID_CMAKE_HELPERSSCRIPTS_INSTALL_PATH})

INSTALL(FILES "${OFBUILD_DIST_CMAKE_MODULES_DIR}/FindR.cmake"
        DESTINATION ${OPENFLUID_CMAKE_HELPERSSCRIPTS_INSTALL_PATH})
